2010-01-12  <ottxor@users.sourceforge.net>

	* configure.in share/Makefile.am:  Do not install LaTeX support files
	if there is no latex on the system.  Add configuration option
	--without-latex
	Bug #2928310

2010-01-12  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pdf.trm: Always start a new path with a moveto.
	Bug #2930705

	* src/plot2d.c (store2d_point): steps, fsteps, and histeps were
	incorrectly auto-scaling to yhigh (which is really variable color).
	Bug #2929314

2010-01-10  <ottxor@users.sourceforge.net>

	* share/Makefile.am:  Do not install x11 appdefaults file if no
	X11 support is selected.  Bug #2928271

2010-01-06  Alexander Täschner  <taschna@users.sourceforge.net>

	* config/config.nt src/datafile.c src/eval.c src/plot.c src/stdfn.c
	src/stdfn.h: Define a generic function not_a_number() in which we can
	hide platform-specific implementations.  Add a support for initializing
	NaN and GPVAL_NaN on Windows.
	Bug #2925544

2010-01-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/PostScript/prologue.ps term/PostScript/prologues.h:
	Update version in PostScript prolog.
	Define a user-configurable flag SuppressPDFMark.

2009-12-31  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc:  More info on font use in wxt and cairo terms.

2009-12-30  Thomas Sefzick <thse@users.sourceforge.net>

	* src/graph3d.c: Fix incorrect color assignment of contour lines when
	'set style increment user' is set.

2009-12-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate: Fix buffer overflow.

2009-12-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/win/wgraph.c (drawgraph: W_line_type):  Change initial line
	template for LT_BACKGROUND to 0 (lt -1) rather than 1 (lt 0).
	Bug #1952287

2009-12-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tables.h src/tables.c src/show.c src/save.c src/graph3d.h:
	Move all the DGRID3D_* options into a shared table.
